add: 0817 algo study

--- a/Algorithm/완전탐색_순열,조합,부분집합.md
+++ b/Algorithm/완전탐색_순열,조합,부분집합.md
@@ -192,3 +192,59 @@ public class SubsMain {
 }
 
 ```
+
+## 조합 + 부분집합 
+### 1) 조합 기반 부분집합 
+```java
+import java.io.*; 
+import java.util.*; 
+/*
+ * 부분집합 응용 - 조합 기반의 부분집합 추출
+ */
+public class CombMainSubs {
+	static int N = 4, R = 3, C = 0; 
+	static int[] a = {1,2,3,4}, b=new int[R];
+
+	static void comb(int start, String str) { 	// 부분집합
+		System.out.println(str);  C++;
+		for(int i=start; i<N; i++) {
+			comb(i+1, str+a[i]);
+		}
+	}
+	public static void main(String[] args) throws Exception{
+		C = 0; 
+		comb(0, "");
+		System.out.println(C);
+	}
+}
+```
+### 2) 부분집합 기반 조합 
+```java
+package a0808.subset;
+
+import java.util.*; 
+import java.io.*; 
+/*
+ * 부분집합 기반 조합:  부분집합 여러 개 중에, 3개의 원소만 갖는 경우
+ */
+public class SubsMainComb {
+	static int N = 4, C = 0; 
+	static int[] a = {1,2,3,4} ;
+
+	static void subs(int cnt, String str, int r) { 
+		if(r == 3) { 
+			System.out.println(str); C++; 
+			return ; 
+		}
+		if(cnt == N) return; // ArrayIndexOutOfBoundException 발생 막음 
+		subs(cnt+1, str+"-"   , r);
+		subs(cnt+1, str+a[cnt], r+1);
+	}
+
+	public static void main(String[] args) throws Exception{
+		C = 0; 
+		subs(0, "", 0);
+		System.out.println(C);
+	}
+}
+```
