add: 0819 나무높이 회고록 추가

--- a/회고록/20250819.md
+++ b/회고록/20250819.md
@@ -5,3 +5,38 @@
 문제를 잘 읽고, 하라는대로 구현 하면 잘 풀렸던 문제
 
 ## swea 14510. 나무 높이
+
+나의 논리적인 오류: maxHeight보다 무조건 크면 되는 게 아니라, 딱 그 길이가 되는데 필요한 요일수를 구해야 하는 것
+내 방식대로 풀면 항상 최소 일수가 나오지 못함
+
+1. 필요한 나무 길이를 구하고
+2. 그 나무 길이를 키우는데 필요한 홀수일, 짝수일 개수를 구해야 한다.
+
+```java
+int need_ones = 0, need_twos = 0;
+for(int i=0; i<N; i++) {
+  int heightDiff = maxHeight - mat[i];
+  if(heightDiff > 0) {
+    // 더 자라야 하는 높이에 대해서 홀수일, 짝수일이 각각 며칠 필요한지 계산
+    need_ones += heightDiff % 2;
+    need_twos += heightDiff / 2;
+  }
+}
+
+int days = 0;
+while(need_ones > 0 || need_twos > 0) {	// 둘 중 하나라도 0일 이상이면 계속 계산 진행해야 됨
+  days++;								// 무조건 하루 카운트
+  if(days%2 == 1) {					// 홀수날에
+    if(need_ones > 0) {				// +1 필요할 때가 남아있다면
+      need_ones--;
+    }else if(need_twos - need_ones > 1) {	// +1은 다 채워줬는데, +2만 남았을 때: +2 해야 할 경우가 1개 남았을 때는 하루 쉬고 +2하는 게 더 이득이니까 이렇게 해줘야 한다.
+      need_twos--; 						// 만약 +2 할 경우가 2개고, +1 은 0번이면; 짝수날에만 했을 때는 4일 소요/ 나눠서 하면 3일
+      need_ones++;
+    }
+  }else {								// +2 필요할 때가 남아있다면
+    if(need_twos > 0) {
+      need_twos--;
+    }
+  }
+}
+```
