update: algorithm divide-conquer'

--- a/Algorithm/완전탐색_분할정복.md
+++ b/Algorithm/완전탐색_분할정복.md
@@ -1,6 +1,6 @@
 - [분할 정복](#분할-정복)
   - [하향식 접근 Top-Down](#하향식-접근-top-down)
-  - [✏️ 같은 색 공간 만들기 - 백준 색종이 만들기](#️-같은-색-공간-만들기---백준-색종이-만들기)
+  - [✏️ 같은 색 공간 만들기 - 백준 색종이 만들기 2630](#️-같은-색-공간-만들기---백준-색종이-만들기-2630)
 
 
 # 분할 정복 
@@ -52,7 +52,45 @@
 >       y <- recur_power(x, (n-1)/2)
 >       return y*y*x 
 
-## ✏️ 같은 색 공간 만들기 - 백준 색종이 만들기 
+## ✏️ 같은 색 공간 만들기 - 백준 색종이 만들기 2630
 
 💡 문제
 - n*n 정사각형 공간에서, 하얀색 공간과 초록색 공간의 정사각형 개수를 구하라. 
+
+📌 규칙 
+
+- N 은 2의 n승 형태를 보인다.
+- 공간이 모두 같은 색으로 칠해져 있지 않으면 가로와 세로 중간 부분을 잘라서 똑같은 크기의 4개의 N/2 x N/2 공간으로 나눈다. ⇒ 같은 색이면 분할 안함
+- 이렇게 나누어진 공간이 모두 하얀색 또는 초록색 또는, 1x1 공간이 될 때까지 반복한다.
+
+📌 풀이 방식
+
+- 4분할을 한다.
+- 동일한 문제인데, 크기만 줄어든 걸로 보고 각 4분할된 영역에 대해 동일하게 처리한다.
+
+⚠️ 기저 조건: 모두 같은 색상이거나 크기가 1인 경우
+```java
+static void makeSpace(int r, int c, int size) { 
+    // 주어진 영역이 모두 같은 색상으로 이루어졌는지 체크 
+    int sum = 0; 
+    for(int i=r, rEnd=r+size; i<rEnd; i++) {	
+        for(int j=c, cEnd=c+size; j<cEnd; j++) {
+            sum += spaces[i][j]; 
+        }
+    }
+    // 같은 색으로 이루어져 있다면 해당색의 카운트 증가 후 리턴 
+    // white 0 green 1
+    if(sum == size*size) { // 모두 초록색이면 
+        green++;
+    } else if (sum == 0) { // 모두 하얀색이면 
+        white++;
+    } else { // 섞여 있으면 
+        // 같은 색으로 이루어져 있지 않다면 4분할 후 각 공간에 대해 동일한 처리 
+        int newSize = size/2; 
+        makeSpace(r, c, newSize);			// 좌측상단 영역
+        makeSpace(r+newSize, c, newSize);	// 좌측하단 영역 
+        makeSpace(r, c+newSize, newSize); 	// 우측상단 영역
+        makeSpace(r+newSize, c+newSize, newSize);	
+    }	
+    }
+```
