--- a/Algorithm/0-1_냅색.md
+++ b/Algorithm/0-1_냅색.md
@@ -78,12 +78,55 @@ FOR i in 1..n
 ```
 
 ## 0-1 냅색 문제의 수행과정 
+
+시간복잡도: O($N*W$)
+
 1. 배낭을 초기화한다.  
     - i=0이거나 w=0인 경우, 최대가치는 0이므로 이들을 초기화한다. 
 2. 물건 i까지 차례대로 고려하며, w가 증가할 때 가질 수 있는 최대가치를 계산한다. 
 3. 물건 n까지 모두 고려한 뒤, 얻을 수 있는 최대 가치는 `K[n+1][W+1]`이 된다. 
 
-최종 결과: 
 
-![alt text](image-27.png)
+**수행과정:**
+
+![alt text](img_0-1냅색_3.jpg)
+
+**최종 결과:**
+
+![alt text](img_0-1냅색_4.png)
+
+# 냅색의 공간복잡도를 개선
+
+## 2차원 배열을 1차원 배열로 압축한다 + 역순 탐색이 동반되어야 한다 
+
+테이블 정의 `K[W]`
+
+- 현재까지 고려한 물건들로, 용량 w를 채울 때 얻을 수 있는 최대 가치 
+- 물건 i를 고려하고 있다면, 테이블에는 물건 i-1에 대해서 용량 w를 채울 때 얻을 수 있는 최대 가치들이 저장되어 있다. 
+- 초기값: 모두 0이다. 
+
+점화식
+
+- 물건 i에 대해 최대 가치를 계산하는 과정이라고 한다면,
+  ```java
+  FOR w in n->1
+    K[w] = max(K[w], K[w-w_i] + v_i) 
+  ``` 
+- 역순 탐색해야 하는 이유
+  - 순방향 탐색할 경우, 앞서서 이미 사용한 물건을 또 사용하는 문제가 발생한다. 
+
+![alt text](<Screenshot_20250908_154619_Samsung Notes.jpg>)
+![alt text](<Screenshot_20250908_154635_Samsung Notes.jpg>)
+
+## 문제의 변형 
+- 물건을 여러 개 담는 것이 가능하다면?
+- 물건의 개수가 무제한이 되었다.
+
+➡️ i번째 물건까지 고려하게 되었을 때, K[i, w-w_i]+v_i까지 고려해야 한다.
+
+➡️ 하나의 테이블을 반복적으로 채우는 방향으로 갈 수 있다
+
+➡️ 물건 i를 보고 있다고 할 때 `k[w] = k[w-w_i] + v_i(나를 넣는 경우) + k[w](나를 안 넣는 경우)`
+
+➡️ 업데이트 전이므로 i-1의 상태를 기준으로 1차원 배열이 채워져 있고, 거기에 나를 추가할래 말래로 나누어진다.
 
