create: img/; mv: img files

--- a/Algorithm/최장증가부분수열.md
+++ b/Algorithm/최장증가부분수열.md
@@ -32,8 +32,8 @@
 - 이유: 누구를 마지막으로 하는 게 최장 길이인지 모르기 때문에 항상 마지막에 있는 LIS값이 정답이 아니다. 
 - 따라서, 모든 정점 연산을 마친 뒤에, LIS[] 값 중, MAX 값을 찾아야 한다. 
 
-![alt text](img_최장증가부분수열_04.jpg)
-![alt text](img_최장증가부분수열_03.jpg)
+![alt text](img/img_최장증가부분수열_04.jpg)
+![alt text](img/img_최장증가부분수열_03.jpg)
 
 
 
@@ -53,8 +53,8 @@
 > - 이때 그 수가 들어가야 하는 위치는 이 함수의 반환값 pos를 이용해 `-(pos + 1)` 위치에 넣으면 된다. 
 
 
-![alt text](img_최장증가부분수열_02.jpg)
-![alt text](img_최장증가부분수열_01.jpg)
+![alt text](img/img_최장증가부분수열_02.jpg)
+![alt text](img/img_최장증가부분수열_01.jpg)
 
 
 ## 코드로 구현 
