--- a/Algorithm/플로이드워샬.md
+++ b/Algorithm/플로이드워샬.md
@@ -1,35 +1,57 @@
 # 플로이드 워샬 
 
-모든 정점 i에 대해서 
-- 다른 정점으로 가는 최단경로 모두 구하기 
+## 그래프 관련 알고리즘 차이점 정리 
 
-다익스트라 
-- 양의 가중치일 때만 가능
+✅ **프림 / 크루스칼 (MST)**
+- 목표: 그래프의 모든 정점을 연결하면서 간선 가중치 합이 최소가 되는 트리**(최소 신장 트리).**
+- 특징:
+  - “경로 최단”이 아니라 **전체 연결 최소 비용.** 
+  - 출발/도착 정점이 따로 정해져 있지 않음.
 
-음의 가중치 
-- 항상 가중치가 증가한다는 보장이 없기 때문에 
-- 모든 정점에 대해서 완탐을 돌려야 하는데, 똑띠하게 해야 한다. 
+✅ **다익스트라**
+- 목표: **특정 출발 정점** → 다른 모든 정점까지의 최단 경로.
+- 특징:
+  - 출발 정점 고정.
+  - 한 번 실행하면 "그 출발점 기준 최단거리 배열(dist[])"을 얻음.
+  - 양수 가중치 그래프에서만 동작.
+- 시간복잡도: **O(E log V)** (우선순위 큐 사용 시).
 
-1 -> 3 -> 5 -> 2 
-이 안에서 1-3-5라는 최단 경로가 이미 존재한다. 
-따라서, 2는 5를 경유하는 중이기도 하다. 
+✅ **플로이드–워샬**
+- 목표: **모든 정점 쌍 (i, j)에 대해 최단 경로.**
+- 특징:
+  - 출발 정점이 고정되어 있지 않음 → “모든 출발–도착” 쌍을 동시에 계산.
+- 동적 계획법(DP) 아이디어: `dist[i][j] = min(dist[i][j], dist[i][k] + dist[k][j])`
+  - 중간 노드 k를 하나씩 늘려가며 갱신.
+- 음수 간선 허용 (단, 음수 사이클은 불가).
+- 시간복잡도: **O(N³)**. ➡️ 정점 개수가 적을 때(보통 N ≤ 400) 많이 사용.
 
 
-소요되는 시간, 거리, 연료, 움직임의 횟수 등
+## 완전 탐색으로 모든 경로를 따져본다면?
 
+### 상황 
+- 그래프가 n개의 정점을 갖고 있고, 완전 그래프라고 가정하자.
+- 한 정점 i에서 다른 정점 j까지의 최단 경로를 구한다고 해보자. 
+  - 출발 정점과 도착 정점이 임의로 고정할 때, $(n-2)!$의 경우 가짓수를 구하게 된다. 
 
-가중치가 음수가 되면 
-- 그리고 양방향이 되어 음의 싸이클이 발생하면 
-- 계속 왔다갔다 반복 -> 최단을 구할 수가 없다. 언제까지 반복할거야 
-- 음의 사이클이 발생하는지 물어볼 수는 있다 
+이런 경우가 모든 정점에 대해 생긴다고 하더라도,
+지수 승($2^n$)보다, 팩토리얼($n!$)이 훨씬 시간복잡도가 크다. 
 
-가중치가 포함되어 있고, 방향성 그래프에서 최단경로 찾는 경우가 많더라 
+### 해결 방법 
 
-무향이면, 양의 가중치로 문제가 나올 것이다. 
-- 음의 가중치가 존재하게 되면 무한 사이클 발생 
+➡️ 각 정점을 시작 정점으로 정하여, 다익스트라의 최단 경로 알고리즘을 수행한다. 
 
-퓨어한 완탐
+- 인접 행렬 사용 시, $O(N^3)$ (정점의 수 N)
+- 그러나, 음의 가중치가 발생한다면 다익스트라 알고리즘은 불가능하다.
+    - 이유: 다익스트라는 아직 방문하지 않은 정점 중 가장 짧은 거리의 정점을 선택하면, 그 거리는 절대 변하지 않는 최단거리라고 확정짓는다. 모든 간선 가중치가 0 이상이기 때문에 가능하다. 음수 간선이 없기 때문에 이미 짧게 나온 경로보다 더 짧은 경로가 나중에 생길 수 없다.
+    - 결론: 한 번의 탐욕적 선택이 전체 최적해를 보장하지 못해, "탐욕적 선택이 언제나 최적이다"라는 전제가 무너진다.
 
+✅ 음의 가중치가 있을 때는, 플로이드 워샬을 사용해야 한다.
+
+## DP 접근 방법 
+
+> 플로이드 워샬 알고리즘
+> 
+> 모든 쌍의 최단 경로를 찾는 알고리즘 
 
 각 정점을 시작 정점으로 해서 다익스트라 돌리기 
 - 인접행렬로 할 때 $n^2 * n = n^3$
