add; algo floyd war

--- a/Algorithm/그래프_플로이드워샬.md
+++ b/Algorithm/그래프_플로이드워샬.md
@@ -81,6 +81,5 @@ l,k,j vs. l,j min => Dlj^k
 이 둘을 더한, 해가 기존의 최적해 Dij^k와 비교해 더 최적해를 찾으면 되겠다. 
 
 
-## 모든 쌍 최단 경로
-
 ## 플로이드 워샬 알고리즘 수행 과정 
+![alt text](img/image-28.png)
