add; content table

--- a/Algorithm/그래프_플로이드워샬.md
+++ b/Algorithm/그래프_플로이드워샬.md
@@ -1,3 +1,15 @@
+# 목차
+
+- [목차](#목차)
+- [플로이드 워샬](#플로이드-워샬)
+  - [그래프 관련 알고리즘 차이점 정리](#그래프-관련-알고리즘-차이점-정리)
+  - [완전 탐색으로 모든 경로를 따져본다면?](#완전-탐색으로-모든-경로를-따져본다면)
+    - [상황](#상황)
+    - [해결 방법](#해결-방법)
+  - [DP 접근 방법](#dp-접근-방법)
+    - [생각1. 각 정점을 시작 정점으로 해서 다익스트라 돌리기](#생각1-각-정점을-시작-정점으로-해서-다익스트라-돌리기)
+  - [플로이드 워샬 알고리즘 수행 과정](#플로이드-워샬-알고리즘-수행-과정)
+
 # 플로이드 워샬
 
 ## 그래프 관련 알고리즘 차이점 정리
@@ -52,8 +64,7 @@
 
 ## DP 접근 방법
 
-> [!note]
-> **플로이드 워샬 알고리즘**
+> [!note] > **플로이드 워샬 알고리즘**
 >
 > 모든 쌍의 최단 경로를 찾는 알고리즘
 
@@ -71,7 +82,7 @@
 - i의 최적해는 i+1에서 최적해를 구하는데 쓰인다.
 - 즉, **i+1에는 i 상태까지의 최적해가 녹여져 있어서**, 그 안에 지나온 경로/정점개수등이 포함되어있다.
 
-➡️ **i에서 j로 갈 때 k까지 살펴본 상태**를 $D_{ij}^k$라고 한다면 
+➡️ **i에서 j로 갈 때 k까지 살펴본 상태**를 $D_{ij}^k$라고 한다면
 
 ➡️ 이때 l을 거치는 것이 최적인지, 아닌지를 봐야 한다.
 
