--- a/Algorithm/완전탐색_DP_01냅색.md
+++ b/Algorithm/완전탐색_DP_01냅색.md
@@ -1,3 +1,17 @@
+# 목차 
+- [목차](#목차)
+- [0-1 냅색](#0-1-냅색)
+  - [냅색 문제의 정형적 정의](#냅색-문제의-정형적-정의)
+    - [냅색 문제의 유형](#냅색-문제의-유형)
+  - [0-1 냅색 문제의 사고 과정](#0-1-냅색-문제의-사고-과정)
+  - [0-1 냅색 문제의 부분문제 정의](#0-1-냅색-문제의-부분문제-정의)
+  - [0-1 냅색 문제의 sudo code](#0-1-냅색-문제의-sudo-code)
+  - [0-1 냅색 문제의 수행과정](#0-1-냅색-문제의-수행과정)
+- [냅색의 공간복잡도를 개선](#냅색의-공간복잡도를-개선)
+  - [2차원 배열을 1차원 배열로 압축한다 + 역순 탐색이 동반되어야 한다](#2차원-배열을-1차원-배열로-압축한다--역순-탐색이-동반되어야-한다)
+  - [문제의 변형](#문제의-변형)
+
+
 # 0-1 냅색
 
 ## 냅색 문제의 정형적 정의 
