--- a/Algorithm/그래프_플로이드워샬.md
+++ b/Algorithm/그래프_플로이드워샬.md
@@ -8,6 +8,7 @@
     - [해결 방법](#해결-방법)
   - [DP 접근 방법](#dp-접근-방법)
     - [생각1. 각 정점을 시작 정점으로 해서 다익스트라 돌리기](#생각1-각-정점을-시작-정점으로-해서-다익스트라-돌리기)
+  - [생각2. 플로이드 워샬 알고리즘으로 푼다면?](#생각2-플로이드-워샬-알고리즘으로-푼다면)
   - [플로이드 워샬 알고리즘 수행 과정](#플로이드-워샬-알고리즘-수행-과정)
 
 # 플로이드 워샬
@@ -64,7 +65,8 @@
 
 ## DP 접근 방법
 
-> [!note] > **플로이드 워샬 알고리즘**
+> [!note] 
+> 플로이드 워샬 알고리즘
 >
 > 모든 쌍의 최단 경로를 찾는 알고리즘
 
@@ -77,6 +79,8 @@
 
 ➡️ 플로이드 알고리즘의 시간복잡도는 O($n^3$)이지만 너무 간단해서 최고임
 
+## 생각2. 플로이드 워샬 알고리즘으로 푼다면?
+
 배낭 채우기에서 처럼
 
 - i의 최적해는 i+1에서 최적해를 구하는데 쓰인다.
@@ -86,7 +90,7 @@
 
 ➡️ 이때 l을 거치는 것이 최적인지, 아닌지를 봐야 한다.
 
-- `i->l->j` v.s. $D_{ij}^k$
+- `i->l->j` v.s. `i->j` ($D_{ij}^k$)
   - 이때 `i->l`도 최적이어야 하고, `l->j`도 최적이어야 한다.
   - ➡️`i,k,l` vs. `i,l` min => $D_{il}^k$
   - ➡️`l,k,j` vs. `l,j` min => $D_{lj}^k$
