add; algo floyd warshel

--- a/Algorithm/그래프_플로이드워샬.md
+++ b/Algorithm/그래프_플로이드워샬.md
@@ -8,8 +8,9 @@
     - [해결 방법](#해결-방법)
   - [DP 접근 방법](#dp-접근-방법)
     - [생각1. 각 정점을 시작 정점으로 해서 다익스트라 돌리기](#생각1-각-정점을-시작-정점으로-해서-다익스트라-돌리기)
-  - [생각2. 플로이드 워샬 알고리즘으로 푼다면?](#생각2-플로이드-워샬-알고리즘으로-푼다면)
+    - [생각2. 플로이드 워샬 알고리즘으로 푼다면?](#생각2-플로이드-워샬-알고리즘으로-푼다면)
   - [플로이드 워샬 알고리즘 수행 과정](#플로이드-워샬-알고리즘-수행-과정)
+  - [코드 구현](#코드-구현)
 
 # 플로이드 워샬
 
@@ -65,7 +66,7 @@
 
 ## DP 접근 방법
 
-> [!note] 
+> [!note]
 > 플로이드 워샬 알고리즘
 >
 > 모든 쌍의 최단 경로를 찾는 알고리즘
@@ -79,7 +80,7 @@
 
 ➡️ 플로이드 알고리즘의 시간복잡도는 O($n^3$)이지만 너무 간단해서 최고임
 
-## 생각2. 플로이드 워샬 알고리즘으로 푼다면?
+### 생각2. 플로이드 워샬 알고리즘으로 푼다면?
 
 배낭 채우기에서 처럼
 
@@ -99,3 +100,75 @@
 ## 플로이드 워샬 알고리즘 수행 과정
 
 ![alt text](img/image-28.png)
+
+## 코드 구현
+
+`k`, `i`, `j`
+
+경유지, 출발지, 도착지에 대해서
+`k != i && i != j && j != k` 여야 한다.
+
+이것이 자동으로 처리될 수 있는 이유는,
+
+`D[i][j] = 0`으로 초기화를 해두었기 때문이다.
+
+이 로직은, 음수 가중치가 있을 때, `D[i][j]`가 음수 값으로 갱신된다.
+
+이는 플로이드-워셜 알고리즘이 음수 사이클의 존재를 탐지할 수 있게도 해준다.
+
+```java
+import java.io.*;
+import java.util.*;
+
+public class FloydWarshall {
+
+    public static void main(String[] args) throws Exception {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+
+        int N = Integer.parseInt(br.readLine()); // 정점 개수
+        // int M = Integer.parseInt(br.readLine()); // 간선 개수
+
+        long[][] D = new long[N + 1][N + 1]; // 모든 정점 간의 최단 거리 저장
+        final long INF = Long.MAX_VALUE; // 충분히 큰 값으로 무한대를 설정
+
+        for (int i = 1; i <= N; i++) {
+            for (int j = 1; j <= N; j++) {
+                if (i == j) {
+                    D[i][j] = 0; // 자기 자신으로 가는 경로는 0
+                } else {
+                    D[i][j] = INF; // 나머지는 무한대로 초기화
+                }
+            }
+        }
+
+        // 인접 행렬 방식으로 그래프 정보 입력받기
+        for (int i = 1; i <= N; i++) {
+            StringTokenizer st = new StringTokenizer(br.readLine());
+            for (int j = 1; j <= N; j++) {
+                int cost = Integer.parseInt(st.nextToken());
+                if (cost != 0) { // 비용이 0이 아니면 간선이 존재한다고 가정
+                    D[i][j] = cost;
+                }
+            }
+        }
+
+        // 플로이드-워셜 알고리즘 수행 (정점번호: 1..N이라고 가정)
+        // k = 경유지 1..N
+        for (int k = 1; k <= N; k++) {
+            // i = 출발지 1..N
+            for (int i = 1; i <= N; i++) {
+                // j = 도착지 1..N
+                for (int j = 1; j <= N; j++) {
+                    // D[i][k] 또는 D[k][j]가 INF이면 경로가 없으므로 갱신하지 않음
+                    if (D[i][k] != INF && D[k][j] != INF) {
+                        D[i][j] = Math.min(D[i][j], D[i][k] + D[k][j]);
+                    }
+                }
+            }
+        }
+
+        // 결과 출력
+        for(int[] a: D) System.out.println(Arrays.toString(a));
+    }
+}
+```
